<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginRight="50dp"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="50dp">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitulo"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="18sp"
        android:layout_below="@id/txtTitulo"
        />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNome"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endere_o"
        android:textSize="20sp"
        android:layout_below="@id/edtNome"
        />
    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/txtEndereco"/>
    <TextView
        android:id="@+id/txtTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="18sp"
        android:layout_below="@id/edtEndereco"
        />
    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/txtTelefone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/edtTelefone">

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/cadastrar"
            />
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            />

    </LinearLayout>



</RelativeLayout>